--- a/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/course.html
@@ -81,7 +81,7 @@
                 <div class="h2">听一听小朋友的家长们都说了些什么</div>
                 <div class="radios rlist" >
                     <div class="cc rowup">
-                    <volist name="feedback_video" id="vo" length="4">
+                    <volist name="feedback_video" id="vo">
                         <div class="radios-item">
                             <div class="img"><img src=<?=$vo['icon']?> /></div>
                             <div class="title"><?=$vo['title']?></div>
@@ -98,7 +98,7 @@
                 <div class="h2">看一看小朋友们在&nbsp;&nbsp;<span style="font-family: PlutoSans">I Can Read</span> 都学到了些什么</div>
                 <div class="comment rlist">
                     <div class="cc rowup">
-                        <volist name="feedback_text" id="vo" length="3">
+                        <volist name="feedback_text" id="vo">
                             <div class="comment-item">
                                 <div class="img"><img src="<?=$vo['icon']?>" /></div>
                                 <div class="title"><?=$vo['title']?></div>
