wap teacher data binding

--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/foot.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/foot.html
@@ -17,9 +17,9 @@
 <footer id="footer">
     <div class="foot-menu">
         <ul>
-            <a href="{:url('icr/course')}"><li>课程内容</li></a>
-            <a href="{:url('icr/teacher')}"><li>优质师资</li></a>
-            <a href="{:url('icr/school')}"><li>校区环境</li></a>
+            <a href="{:url('/icr/course')}"><li>课程内容</li></a>
+            <a href="{:url('/icr/teacher')}"><li>优质师资</li></a>
+            <a href="{:url('/icr/school')}"><li>校区环境</li></a>
             <li id="foot_menu_more" class="li-last">更多服务</li>
         </ul>
     </div>
