wap add home button

--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/head.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/head.html
@@ -53,7 +53,7 @@
     <section class="page-wrapper">
         <section id="left_menu">
             <ul>
-                <!--<a href="{:url('/')}"><li>首页</li></a>-->
+                <a href="{:url('/')}"><li>首页</li></a>
                 <a href="{:url('/icr/course')}"><li>课程内容</li></a>
                 <a href="{:url('/icr/teacher')}"><li>优质师资</li></a>
                 <a href="{:url('/icr/school')}"><li>校区风采</li></a>
