--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/home.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="course-img"><img src="/themes/icr_wap/icr/imgs/course-img.svg"></div>
                         <div class="course-more">
-                            <a href="#">
+                            <a href="{:url('/icr/course')}">
                                 <span>查看更多课程</span>&nbsp;
                                 <i class="fa fa-chevron-circle-right"></i>
                             </a>
