--- a/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/feedback/add.html
+++ b/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/feedback/add.html
@@ -36,8 +36,12 @@
         <div class="form-group">
             <label class="col-sm-2 control-label">内容（文字/视频URL）:</label>
             <div class="col-md-6 col-sm-10">
-                <textarea class="form-control" name="content" rows="5" cols="57"></textarea>
+                <!--<input name="content" type="file" id="uploadFile" multiple class="file-loading" />-->
+                <input id="uploadFile" type="file" class="file" data-preview-file-type="text" name="content">
             </div>
+            <!--<div class="col-md-6 col-sm-10">-->
+                <!--<textarea class="form-control" name="content" rows="5" cols="57"></textarea>-->
+            <!--</div>-->
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">封面URL:</label>
