--- a/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/feedback/add.html
+++ b/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/feedback/add.html
@@ -37,7 +37,7 @@
             <label class="col-sm-2 control-label">内容（文字/视频URL）:</label>
             <div class="col-md-6 col-sm-10">
                 <label id="file-input" class="btn btn-primary btn-file" style="display: none">
-                    浏览.. <input name='content' type="file" style="display: none;">
+                    <span>浏览..</span> <input name='content' type="file" style="display: none;">
                 </label>
                 <textarea id="content-input" class="form-control" name="content" rows="5" cols="57" style="display: none"></textarea>
             </div>
@@ -78,8 +78,7 @@
     $(document).ready( function() {
         $(':file').on('fileselect', function(event, numFiles, label) {
             if(numFiles == 1) {
-                var element = document.getElementById("file-input");
-                element.innerText = label;
+                $("#file-input").find("span").html(label);
             } else {
                 alert("只能上传一个文件")
             }
