--- a/thinkcmf-5.0.180626/public/themes/RY/icr/user_agreement.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/user_agreement.html
@@ -5,77 +5,210 @@
 <div class="user-agreement">
     <h1>I CAN READ 用户协议</h1>
     <div class="h2">个人信息隐私保护政策</div>
-    <div class="user-agreement-count">
-        <p>Total English Learning Global 高度重视保护您的个人信息安全和个人隐私。严格遵守2012年启动的新加坡个人信息保护法的要求，处理您的个人信息，并确保您的个人信息没有被误用。本政策适用于I Can Read 新加坡总部在各中心进行的信息收集，以及通过I Can Read亚洲和I Can Read招聘网站开展的信息收集。文中出现的 ‘I Can Read’, 我们’, 或 ‘我们的’ 字词代表Total English Learning Global Pte Ltd及其附属机构，企业，组织，商业合作伙伴，代理和（或）员工。“个人信息”有关内容是指（a）任何可用于识别您或您孩子的数据或信息，或（b）以及其他我们收集或将会涉及的信息。</p>
-        <br />
-        <p>1. 个人信息及其采集</p>
-        <br />
-        <p>您或需提供的个人信息包括：</p>
-        <p>a. 于提交的表格中或以其他任何形式所提供的如姓名、电话号码、邮寄地址、电邮及其他任何有关您及您的孩子的信息；</p>
-        <p>b. 您使用I Can Read 新加坡网站及服务的信息，包括网站痕迹、IP地址，但只限于识别用途；</p>
-        <p> c. 您使用和与我们的网站及服务进行互动所留下的信息，包括电脑和链接信息，设备性能、带宽、浏览页面的数据，以及来去我们网站的流量信息。</p>
-        <br />
-        <p>I Can Read 一般通过以下方式来采集个人信息:</p>
-        <p>a. 通过购买我们任何产品及服务时所提交的表格;</p>
-        <p>b. 通过请求提交更多的个人信息；</p>
-        <p> c. 当客户要求被加入电邮或其他邮寄系统中;</p>
-        <p>d. 当客户要求获得中心的联系；</p>
-        <p> e. 当客户收到我们市场传播代表或代理的联系及回复；</p>
-        <p>f. 当客户对我们的问卷调查、促销及其他活动有回应；</p>
-        <p>g. 当客户以其他任何原因向我们提供个人信息。</p>
-        <br />
-        <p>2. 信息采集的目的、使用及公开</p>
-        <br />
-        <p>I Can Read 或将处于特定需要公开或使用部分个人信息，除非其使用与法律相抵触，或事先被告知不可使用客户的个人信息。</p>
-        <p>个人信息或将因以下目的而被采集、使用或公开：</p>
-        <p>a. 认证、更新及维护学生记录；</p>
-        <p>b. 出于行政管理、审计及应急需要；</p>
-        <p>c. 用于解释说明我们的服务和项目内容；</p>
-        <p>d. 用于法律或义务规定的检查和审核程序；</p>
-        <p>e. 评估审核报名资格</p>
-        <p>f. 用于调查审核任何可能的欺诈、误导等非法行为；</p>
-        <p>g. 中心于任何活动中所拍摄的相片及影片将用于市场推广、出版、社交媒体、网站及电子媒体宣传；</p>
-        <p>h. 任何其他目的，我们或将事先书面告知，并取得您的独立同意。</p>
-        <br />
-        <p>3. 公开个人资料及提供予第三方我们将采取严格措施保障个人资料不会在未经授权的情况下被公开。</p>
-        <p>内部资料将不予透露予第三方，如全职教师、员工、维持运营的服务提供者、合作伙伴及/或广告商等，这将不涉及适别任何个人的私人资料。</p>
-        <br />
-        <p>4. 第三方网站——我们的网站包含其他网站的连结，请注意我们对第三方网站的内容及私隐政策概不负责，离开我们的网站前往第三者网站时，请细阅其关于收集个人认证资料的私隐政策。</p>
-        <br />
-        <p> 5. 网站浏览痕迹的使用——我们将使用网站浏览者所留下的「网站浏览痕迹」，用于改善网站的连接工作及检测回访率。「网站浏览痕迹」可说明我们跟踪和定位目标对象，加强来访者的使用体验，其使用不涉及个人身份认证资料。</p>
-        <br />
-        <p>I Can Read 或将通过独立机构对网站的使用进行测量及分析，期间或将通过服务提供机构收集以下重要资讯：</p>
-        <p>a. 网站页面浏览量(或网站印象);</p>
-        <p>b. 网站到访人数（一人只计一次）；</p>
-        <p>c. 每位到访者于网站的平均停留时间； 及</p>
-        <p>d. 到访网站的第一页及最后一页。</p>
-        <br />
-        <p>6. 删除、处理及更正个人资料</p>
-        <br />
-        <p>客户或将随时要求输入、更正或更新其个人资料。您可通过孩子就学所在中心联系我们，或通过电邮、电话及网站和Facebook所提供的连结随时对个人资讯做出以下修改：</p>
-        <p>a. 检查我们录入的任何关于您的资料，如适用；</p>
-        <p>b. 更改/更正您的个人资料；</p>
-        <p>c. 要求删除您的个人资讯；</p>
-        <p>d. 提出任何有关我们使用您个人资讯的疑虑。</p>
-        <br />
-        <p>7. 保留个人资料??基于法律或商务需要的情况下，需要收集及继续使用顾客的个人资料，您的个人资料将被保留直至关系结束，此后客户的个人资讯将被删除或销毁。</p>
-        <br />
-        <p>8. 个人资料的安全性、准确性及政府法例??本隐私政策将全面遵守新加坡法律规定。我们将採取合理和适当的措施保护您的个人资料免受未经授权获得查阅、收集、使用、公开、複製、修改及其他类似侵犯。</p>
-        <br />
-        <p>9. 私隐政策更新，个人私隐政策或会不时更新。任何更新内容将于网站及/或Facebook专页公开告示。</p>
-        <br />
-        <p>10. 联络资料若</p>
-        <br />
-        <p>(a) 对本私隐政策有任何疑问；</p>
-        <p>(b) 欲禁止使用您的个人资讯；</p>
-        <p>(c) 授权处理或更正个人资讯，</p>
-        <br />
-        <br />
-        <p>您可以通过以下方式联系我们：
-        <br />
-        <p>I Can Read 新加坡总部地址：80 Changi Road #04-20 Centropod, Singapore 419715</p>
-        <p>电话:(+65) 6591 8743 / (+65) 6484 1271</p>
-        <p>传真:(+65) 6484 0395</p>
+    <div class="user-agreement-count" style="white-space:pre-line;margin: 0 auto;
+    width: 500px;">
+        隐私条款（请认真阅读以下内容）
+        1.您的个⼈资料
+        我们的⽹站记录您的电脑的IP地址和浏览器类型，但是我们不将该数据
+        与任何能够确定您的个⼈身份的东⻄相连。这意味着⽤户上⽹的情形将被追
+        踪，但⽤户仍然保持匿名。我们记录这⼀资料，以便监测客户的⽤量规律和
+        ⽹站的使⽤情况，这帮助我们不断改进 I CAN READ 英语的设计和布局。
+        以上做法有任何疑问，请与我们联络。
+        2.安全措施
+        我们使⽤的是具有安全设置的服务器来接收您的信⽤卡信息。 我们只有
+        ⽤正确的密码才能得到您的个⼈信息和课程情况，以防有⼈⾮法盗⽤。如果
+        您在没有登出的状态下离开电脑，我们会让您在⼀定时间后⾃动登出。
+        3.会员注册
+        I CAN READ 英语提供丰富的英语课程体验。如果您想参加⼀⻔课程，
+        享受免费试⽤或成为我们团体服务的⽤户之⼀，您需要成为 I CAN READ
+        英语的会员。您⼀旦成为会员，便意味着您同意 I CAN READ 英语和其它
+        I CAN READ英语旗下公司使⽤您参加 I CAN READ 英语期间⽣成的图像，
+        ⾔论，照⽚，视频短⽚等资料在任何媒体上进⾏ I CAN READ 英语的推⼴
+        和宣传，包括所有的⼴告，邀请或商业活动。
+        4.Cookies
+        “Cookies”是⽤来记录您浏览器或硬盘中储存的信息。 我们只是⽤它来
+        确定您所在的国家，以便给您提供相应的语种服务。 我们的“Cookies”不会
+        从您的浏览器或硬盘⾥攫取更多的信息。⼤多数浏览器可以让您选择不接受
+        “Cookies”，但这样做可能会使您失去 I CAN READ 英语更多更好的服
+        务。 如果您点击我们的⼴告客户在我们的⽹站所做的⼴告，您可能存储
+        cookies！我们对这些不进⾏控制，同样也不享有他们可能收集的任何信
+        息。
+        5.IP地址和浏览器类型
+        我们索取您的信息，主要⽬的是给您提供更加个性化的服务。我们尊重
+        您的隐私，不会出售、出租或交换您的姓名及个⼈信息给其他的机构。
+        ⽤户服务条款
+        1. 特别提示
+        1.1 I CAN READ 英语⽹站同意按照本协议的规定及其不时发布的操作规则提供基于
+        互联⽹以及移动⽹的相关服务（以下称“⽹络服务”），为获得⽹络服务，服务使⽤⼈
+        （以下称“⽤户”）应当同意本协议的全部条款并按照⻚⾯上的提示完成全部的注册程
+        序。⽤户在进⾏注册程序过程中点击“同意”按钮即表示⽤户完全接受本协议项下的全
+        部条款。
+        1.2⽤户注册成功后，I CAN READ 英语⽹站将给予每个⽤户⼀个⽤户帐号及相应的密
+        码，该⽤户帐号和密码由⽤户负责保管；⽤户应当对以其⽤户帐号进⾏的所有活动和
+        事件负法律责任。
+        2. 服务内容
+        2.1 I CAN READ ⽹⽹络服务的具体内容由 I CAN READ ⽹根据实际情况提供，例如
+        论坛( BBS )、教育问答等。
+        2.2⽤户理解，I CAN READ ⽹仅提供相关的⽹络服务，除此之外与相关⽹络服务有关
+        的设备（如个⼈电脑、⼿机、及其他与接⼊互联⽹或移动⽹有关的装置）及所需的费
+        ⽤（如为接⼊互联⽹⽽⽀付的电话费及上⽹费、为使⽤移动⽹⽽⽀付的⼿机费）均应
+        由⽤户⾃⾏负担。
+        3. 服务变更、中断或终⽌
+        3.1鉴于⽹络服务的特殊性，⽤户同意 I CAN READ ⽹有权随时变更、中断或终⽌部
+        分或全部的⽹络服务（包括收费⽹络服务）。如变更、中断或终⽌的⽹络服务属于免
+        费⽹络服务，I CAN READ ⽹⽆需通知⽤户，也⽆需对任何⽤户或任何第三⽅承担任
+        何责任；如变更、中断或终⽌的⽹络服务属于收费⽹络服务，I CAN READ ⽹应当在
+        变更、中断或终⽌之前事先通知⽤户，并应向受影响的⽤户提供等值的替代性的收费
+        ⽹络服务，如⽤户不愿意接受替代性的收费⽹络服务，就该⽤户已经向 I CAN READ
+        ⽹⽀付的服务费，I CAN READ ⽹应当按照该⽤户实际使⽤相应收费⽹络服务的情况
+        扣除相应服务费之后将剩余的服务费退还给该⽤户。
+        3.2⽤户理解，I CAN READ ⽹需要定期或不定期地对提供⽹络服务的平台（如互联⽹
+        ⽹站、移动⽹络等）或相关的设备进⾏检修或者维护，如因此类情况⽽造成收费⽹络
+        服务在合理时间内的中断，I CAN READ ⽹⽆需为此承担任何责任，但 I CAN READ
+        ⽹应尽可能事先进⾏通告。
+        3.3如发⽣下列任何⼀种情形，I CAN READ ⽹有权随时中断或终⽌向⽤户提供本协议
+        项下的⽹络服务（包括收费⽹络服务）⽽⽆需对⽤户或任何第三⽅承担任何责任：
+        3.3.1 ⽤户提供的个⼈资料不真实；
+        3.3.2 ⽤户违反本协议中规定的使⽤规则；
+        3.3.3 ⽤户在使⽤收费⽹络服务时未按规定向 I CAN READ ⽹⽀付相应的服务费。
+        3.4如⽤户注册的免费⽹络服务的帐号在任何连续180⽇内未实际使⽤，或者⽤户注册
+        的收费⽹络服务的帐号在其订购的收费⽹络服务的服务期满之后连续180⽇内未实际
+        使⽤，则 I CAN READ ⽹有权删除该帐号、删除该⽤户的所有个⼈信息并停⽌为该⽤
+        户提供相关的⽹络服务。
+        4. 使⽤规则
+        4.1⽤户在申请使⽤ I CAN READ ⽹⽹络服务时，必须向 I CAN READ ⽹提供必要的
+        准确的个⼈资料，如个⼈必要资料有任何变动，请务必及时更新。
+        4.2⽤户不应将其帐号、密码转让或出借予他⼈使⽤。如⽤户发现其帐号遭他⼈⾮法使
+        ⽤，应⽴即通知 I CAN READ ⽹。因⿊客⾏为或⽤户的保管疏忽导致帐号、密码遭他
+        ⼈⾮法使⽤，I CAN READ ⽹不承担任何责任。
+        4.3 ⽤户同意 I CAN READ ⽹有权在提供⽹络服务过程中以各种⽅式投放各种商业性
+        ⼴告或其他任何类型的商业信息（包括但不限于在 I CAN READ ⽹⽹站的任何⻚⾯上
+        投放⼴告），并且，⽤户同意接受 I CAN READ ⽹通过电⼦邮件或其他⽅式向⽤户发
+        送商品促销或其他相关商业信息。
+        4.4对于⽤户通过 I CAN READ ⽹⽹络服务（包括但不限于论坛、BBS、教育问答）
+        上传到 I CAN READ ⽹⽹站上可公开获取区域的任何内容，⽤户同意 I CAN READ ⽹
+        在全世界范围内具有免费的、永久性的、不可撤销的、⾮独家的和完全再许可的权利
+        和许可，以使⽤、复制、修改、改编、出版、翻译、据以创作衍⽣作品、传播、表演
+        和展示此等内容（整体或部分），和/或将此等内容编⼊当前已知的或以后开发的其他
+        任何形式的作品、媒体或技术中。
+        4.5⽤户在使⽤ I CAN READ ⽹⽹络服务过程中，必须遵循以下原则：
+        4.5.1 遵守中国有关的法律和法规；
+        4.5.2 遵守所有与⽹络服务有关的⽹络协议、规定和程序；
+        4.5.3 不得为任何⾮法⽬的⽽使⽤⽹络服务系统；
+        4.5.4 不得以任何形式使⽤ I CAN READ ⽹⽹络服务侵犯 I CAN READ ⽹的商业利
+        益，包括并不限于发布⾮经 I CAN READ ⽹许可的商业⼴告；
+        4.5.5 不得利⽤ I CAN READ ⽹⽹络服务系统进⾏任何可能对互联⽹或移动⽹正常运
+        转造成不利影响的⾏为；
+        4.5.6 不得利⽤ I CAN READ ⽹提供的⽹络服务上传、展示或传播任何虚假的、骚扰
+        性的、中伤他⼈的、辱骂性的、恐吓性的、庸俗淫秽的或其他任何⾮法的信息资料；
+        4.5.7 不得侵犯其他任何第三⽅的专利权、著作权、商标权、名誉权或其他任何合法权
+        益；
+        4.5.8 不得利⽤ I CAN READ ⽹⽹络服务系统进⾏任何不利于 I CAN READ ⽹的⾏
+        为；
+        4.6 I CAN READ ⽹有权对⽤户使⽤ I CAN READ ⽹⽹络服务的情况进⾏审查和监督
+        (包括但不限于对⽤户存储在 I CAN READ ⽹的内容进⾏审核)，如⽤户在使⽤⽹络服
+        务时违反任何上述规定，I CAN READ ⽹或其授权的⼈有权要求⽤户改正或直接采取
+        ⼀切必要的措施（包括但不限于更改或删除⽤户张贴的内容等、暂停或终⽌⽤户使⽤
+        ⽹络服务的权利）以减轻⽤户不当⾏为造成的影响。
+        4.7 I CAN READ ⽹针对某些特定的 I CAN READ ⽹⽹络服务的使⽤通过各种⽅式
+        （包括但不限于⽹⻚公告、电⼦邮件、短信提醒等）作出的任何声明、通知、警示等
+        内容视为本协议的⼀部分，⽤户如使⽤该等 I CAN READ ⽹⽹络服务，视为⽤户同意
+        该等声明、通知、警示的内容。
+        4.8凡⽤户昵称中出现如下信息者（包括但不限于），论坛有权进⾏屏蔽、锁定，甚⾄
+        注销：
+        4.8.1.使⽤严重违反国家法律法律及⻛序良俗，包含或暗藏反动、⾊情等信息（含符号、
+        地址等）的昵称；
+        4.8.2.使⽤党和国家领导⼈、古今中外⽐较有影响的名⼈、⽹络上知名⼈⼠的真实姓名、
+        字、号、艺名、笔名、头衔等为昵称；
+        4.8.3.使⽤国家机构、企事业单位、知名公司或品牌的名称及标识为昵称；
+        4.8.4.含性别歧视、种族歧视、地域歧视等信息的昵称；
+        4.8.5.含⾃侮辱、猥亵或者对他⼈进⾏侮辱、挑衅、漫骂、⼈身攻击等不⽂明、不健康
+        信息的昵称；
+        4.8.6.含易产⽣歧义、引起他⼈误解的信息的昵称；
+        4.8.7.未获得 I CAN READ ⽹官⽅正式许可⽽使⽤带有 I CAN READ ⽹相关名称的昵
+        称；
+        4.8.8.与 I CAN READ ⽹⽼师、及社区管理⼈员的昵称近似或雷同，并可能引起混淆
+        或纠纷的；
+        4.8.9.带有明显⼴告性质的昵称；
+        4.8.10.带有其它法律法规以及论坛禁⽌规则中所包含信息的昵称。
+        5. 知识产权
+        5.1 I CAN READ ⽹提供的⽹络服务中包含的任何⽂本、图⽚、图形、⾳频和/或视频
+        资料均受版权、商标和/或其它财产所有权法律的保护，未经相关权利⼈同意，上述资
+        料均不得在任何媒体直接或间接发布、播放、出于播放或发布⽬的⽽改写或再发⾏，
+        或者被⽤于其他任何商业⽬的。所有这些资料或资料的任何部分仅可作为私⼈和⾮商
+        业⽤途⽽保存在某台计算机内。I CAN READ ⽹不就由上述资料产⽣或在传送或递交
+        全部或部分上述资料过程中产⽣的延误、不准确、错误和遗漏或从中产⽣或由此产⽣
+        的任何损害赔偿，以任何形式，向⽤户或任何第三⽅负责。
+        5.2 I CAN READ ⽹为提供⽹络服务⽽使⽤的任何软件（包括但不限于软件中所含的
+        任何图象、照⽚、动画、录像、录⾳、⾳乐、⽂字和附加程序、随附的帮助材料）的
+        ⼀切权利均属于该软件的著作权⼈，未经该软件的著作权⼈许可，⽤户不得对该软件
+        进⾏反向⼯程（reverse engineer）、反向编译（decompile）或反汇编
+        （disassemble）。
+        6. 隐私保护
+        6.1保护⽤户隐私是 I CAN READ ⽹的⼀项基本政策，I CAN READ ⽹保证不对外公
+        开或向第三⽅提供单个⽤户的注册资料及⽤户在使⽤⽹络服务时存储在 I CAN READ
+        ⽹的⾮公开内容，但下列情况除外：
+        6.1.1 事先获得⽤户的明确授权；
+        6.1.2 根据有关的法律法规要求；
+        6.1.3 按照相关政府主管部⻔的要求；
+        6.1.4 为维护社会公众的利益；
+        6.1.5 为维护 I CAN READ ⽹的合法权益。
+        6.2 I CAN READ ⽹可能会与第三⽅合作向⽤户提供相关的⽹络服务，在此情况下，
+        如该第三⽅同意承担与 I CAN READ ⽹同等的保护⽤户隐私的责任，则⽤户同意 I
+        CAN READ ⽹有权将⽤户的注册资料等提供给该第三⽅。
+        6.3在不透露单个⽤户隐私资料的前提下，I CAN READ ⽹有权对整个⽤户数据库进⾏
+        分析并对⽤户数据库进⾏商业上的利⽤。
+        7. 免责声明
+        7.1⽤户明确同意其使⽤ I CAN READ ⽹⽹络服务所存在的⻛险将完全由其⾃⼰承担；
+        因其使⽤ I CAN READ ⽹⽹络服务⽽产⽣的⼀切后果也由其⾃⼰承担，I CAN READ
+        ⽹对⽤户不承担任何责任。
+        7.2 I CAN READ ⽹不担保⽹络服务⼀定能满⾜⽤户的要求，也不担保⽹络服务不会
+        中断，对⽹络服务的及时性、安全性、准确性也都不作担保。
+        7.3 I CAN READ ⽹不保证为向⽤户提供便利⽽设置的外部链接的准确性和完整性，
+        同时，对于该等外部链接指向的不由 I CAN READ ⽹实际控制的任何⽹⻚上的内容，I
+        CAN READ ⽹不承担任何责任。
+        7.4对于因不可抗⼒或 I CAN READ ⽹不能控制的原因造成的⽹络服务中断或其它缺
+        陷，I CAN READ ⽹不承担任何责任，但将尽⼒减少因此⽽给⽤户造成的损失和影
+        响。
+        7.5⽤户同意，对于 I CAN READ ⽹向⽤户提供的下列产品或者服务的质量缺陷本身
+        及其引发的任何损失，I CAN READ ⽹⽆需承担任何责任：
+        7.5.1 I CAN READ ⽹向⽤户免费提供的各项⽹络服务；
+        7.5.2 I CAN READ ⽹向⽤户赠送的任何产品或者服务；
+        7.5.3 I CAN READ ⽹向收费⽹络服务⽤户附赠的各种产品或者服务。
+        7.6 I CAN READ ⽹问吧，问题的回答结果仅依据提问者的描述提供建议性内容，仅
+        供参考。本⽹教师会员及普通会员仅提供专业性或⾮专业性知识参考，不做指导性意
+        ⻅。
+        7.7本⽹站会员(或⽹友)所上传的相⽚、⽂章或讨论区发⾔内容，由该会员(或⽹友)⾃
+        ⾏对该相⽚、⽂章或讨论区发⾔内容担保其知识性、专业性以及合法性。
+        8. 违约赔偿
+        8.1如因 I CAN READ ⽹违反有关法律、法规或本协议项下的任何条款⽽给⽤户造成
+        损失，I CAN READ ⽹同意承担由此造成的损害赔偿责任。
+        8.2⽤户同意保障和维护 I CAN READ ⽹及其他⽤户的利益，如因⽤户违反有关法律、
+        法规或本协议项下的任何条款⽽给 I CAN READ ⽹或任何其他第三⼈造成损失，⽤户
+        同意承担由此造成的损害赔偿责任。
+        9. 协议修改
+        9.1 I CAN READ ⽹有权随时修改本协议的任何条款，⼀旦本协议的内容发⽣变动，I
+        CAN READ ⽹将会直接在 I CAN READ ⽹⽹站上公布修改之后的协议内容，该公布
+        ⾏为视为 I CAN READ ⽹已经通知⽤户修改内容。I CAN READ ⽹也可通过其他适当
+        ⽅式向⽤户提示修改内容。
+        9.2如果不同意 I CAN READ ⽹对本协议相关条款所做的修改，⽤户有权停⽌使⽤⽹
+        络服务。如果⽤户继续使⽤⽹络服务，则视为⽤户接受 I CAN READ ⽹对本协议相关
+        条款所做的修改。
+        10. 通知送达
+        10.1本协议项下 I CAN READ ⽹对于⽤户所有的通知均可通过⽹⻚公告、电⼦邮件、
+        ⼿机短信或常规的信件传送等⽅式进⾏；该等通知于发送之⽇视为已送达收件⼈。
+        10.2 ⽤户对于 I CAN READ ⽹的通知应当通过 I CAN READ ⽹对外正式公布的通信
+        地址、传真号码、电⼦邮件地址等联系信息进⾏送达。
+        11. 法律管辖
+        11.1 本协议的订⽴、执⾏和解释及争议的解决均应适⽤中国法律并受中国法院管辖。
+        11.2如双⽅就本协议内容或其执⾏发⽣任何争议，双⽅应尽量友好协商解决；协商不
+        成时，任何⼀⽅均可向 I CAN READ ⽹所在地的⼈⺠法院提起诉讼。
+        12. 其他规定
+        12.1本协议构成双⽅对本协议之约定事项及其他有关事宜的完整协议，除本协议规定
+        的之外，未赋予本协议各⽅其他权利。
+        12.2如本协议中的任何条款⽆论因何种原因完全或部分⽆效或不具有执⾏⼒，本协议
+        的其余条款仍应有效并且有约束⼒。
+        12.3 本协议中的标题仅为⽅便⽽设，在解释本协议时应被忽略。
     </div>
 </div>
 <include file="../public/themes/RY/icr/foot.html" />
